# guardian-cli

./: Cargo.toml  README.md
docs/: ai_agent_instructions.md  architecture.md  design.md  plan.md  prd.md  research.txt  status.md  usage.md
src/: config.rs  main.rs  ollama.rs
src/checks/: cache_busting.rs  clippy_disables.rs  function_count.rs  loc_limits.rs  mod.rs  module_count.rs  rust_edition.rs  test_quality.rs
src/commands/: checks.rs  config_cmd.rs  host.rs  llm.rs  mod.rs  output.rs
