[package]
name = "guardian-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Michael A Wright"]
description = "A local LLM governor CLI for enforcing development process and architecture rules"
license = "MIT"
repository = "https://github.com/softwarewrighter/guardian-cli"
keywords = ["cli", "ollama", "llm", "code-review", "development"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "guardian-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
